export const snapshot = {};

snapshot[`imagick plugin 1`] = `5`;

snapshot[`imagick plugin 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      key: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      key: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      key: ".json",
    },
    {
      engine: true,
      key: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engine: false,
      key: ".jpg",
      pageLoader: [AsyncFunction: binary],
    },
    {
      asset: true,
      engine: false,
      key: ".jpeg",
      pageLoader: [AsyncFunction: binary],
    },
    {
      asset: true,
      engine: false,
      key: ".png",
      pageLoader: [AsyncFunction: binary],
    },
  ],
}
`;

snapshot[`imagick plugin 3`] = `
[
]
`;

snapshot[`imagick plugin 4`] = `
{
  content: "Uint8Array(14355)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        blur: 10,
        resize: 20,
        suffix: "-small",
      },
      {
        blur: 10,
        resize: 20,
        suffix: "-big",
      },
      {
        format: "jpg",
      },
      {
        format: "webp",
      },
      {
        format: "png",
      },
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.png",
  },
  dest: {
    ext: ".png",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume",
  },
}
`;

snapshot[`imagick plugin 5`] = `
{
  content: "Uint8Array(899)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-small.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-small",
  },
  src: {
    ext: ".png",
    path: "/lume[0]",
  },
}
`;

snapshot[`imagick plugin 6`] = `
{
  content: "Uint8Array(899)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-big.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-big",
  },
  src: {
    ext: ".png",
    path: "/lume[1]",
  },
}
`;

snapshot[`imagick plugin 7`] = `
{
  content: "Uint8Array(1231)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.jpg",
  },
  dest: {
    ext: ".jpg",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[2]",
  },
}
`;

snapshot[`imagick plugin 8`] = `
{
  content: "Uint8Array(8648)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.webp",
  },
  dest: {
    ext: ".webp",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[3]",
  },
}
`;
